--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,5 +10,5 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#25364f, #4d71a5);
+  background: linear-gradient(#25364f, #4d71a5, #ffffff);
 }
