--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,3 +12,21 @@
   height: 100%;
   background: linear-gradient(#25364f, #4d71a5, #ffffff);
 }
+
+#hidden-link {
+  font-size: 2.5rem;
+  font-family: "Dancing Script", cursive;
+  color: black;
+
+  /* position */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%);
+  transform: translate(-50%);
+
+  /* transition */
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
+}
