--- a/assets/css/slideshow.css
+++ b/assets/css/slideshow.css
@@ -4,8 +4,12 @@
   box-sizing: border-box;
 }
 
+body {
+  background: linear-gradient(#25364f, #4d71a5, #ffffff);
+}
+
 .container-carousel {
-  width: 80%;
+  width: 100%;
   margin: auto;
   overflow: hidden;
   position: relative;
@@ -14,11 +18,10 @@
 .carousel-slide {
   display: flex;
   width: 100%;
-  height: 100%;
 }
 
 .carousel-slide img {
-  width: 100%;
+  max-width: 100%;
 }
 
 #prevBtn,
@@ -26,23 +29,34 @@
   position: absolute;
   top: 50%;
   z-index: 4;
-  font-size: 30px;
+  font-size: 50px;
   color: white;
   cursor: pointer;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 #prevBtn {
   left: 5%;
+
+  /* on first revolution */
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
 }
 
 #nextBtn {
   right: 5%;
 }
 
-span {
-  font-size: 3rem;
+.message {
+  font-size: 4rem;
   font-family: "Dancing Script", cursive;
   color: white;
+  /* ref: https://css-tricks.com/adding-stroke-to-web-text/ */
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
+  text-align: center;
 
   /* position */
   position: absolute;
@@ -55,5 +69,10 @@ span {
   /* transition */
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity 0.5s linear;
+  transition: visibility 0s, opacity 1s linear;
+}
+
+#message-17 {
+  font-size: 5rem;
+  transition: visibility 0s, opacity 7s linear;
 }
