--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,7 @@
   font-size: 2.5rem;
   font-family: "Dancing Script", cursive;
   color: black;
+  text-decoration: none;
 
   /* position */
   position: absolute;
